# worde4mde

./: .gitignore  DEV.md  README.md  conda_env.yml  describe_dataset.py  evaluate_mlm.py  exploring_corpus.py  main.py  parse_pdfs.py  recommendation_run_wo_dup.sh  requirements.txt  setup.cfg  setup.py  stackoverflow.txt  test.py  train_mlm.py  vocabs_converage.py
applications/ml2.semantic.emfcompare/: .classpath  .project  build.properties  plugin.xml
applications/ml2.semantic.emfcompare.evaluation/: .project
applications/ml2.semantic.emfcompare.evaluation/petri/rename/: rename_v0.ecore  rename_v0.emf  rename_v1.ecore  rename_v1.emf
applications/ml2.semantic.emfcompare.evaluation/rename/: rename_v0.ecore  rename_v0.emf  rename_v1.ecore  rename_v1.emf
applications/ml2.worde4mde/: .classpath  .project  build.properties
data/: preprocess.py
examples/: similar_words.ipynb
java/parser/: pom.xml
modelset_evaluation/: evaluation.py  evaluation_classification_clustering.py  evaluation_metamodel_concepts.py
scripts/: classification_clustering.sh  classification_clustering_uml.sh  download_embeddings.sh  recommendation_run_w_dup.sh  recommendation_run_wo_dup.sh  train_w2v_models.sh
src/worde4mde/: load_embeddings.py
tests/: test_preprocessing.py
w2v/: w2v.py
web-playground/: README.md
web-playground/app/: urls.py  views.py
web-playground/app/templatetags/: routes.py
web-playground/playground/: asgi.py  settings.py  urls.py  urls.py~  wsgi.py
web-playground/static/: scribbler-landing.css
worde4mde/: __init__.py
(+26 files in other folders)
