[metadata]
name = worde4mde
version = 1.0
author = jesusc
author_email = jesusc@um.es
description = Embeddings for software modeling
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/models-lab/worde4mde
project_urls =
    Bug Tracker = https://github.com/models-lab/worde4mde/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.0

[options.packages.find]
where = src
